blog/infra/k8s/client-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-depl
spec:
  replicas: 1
  # defines which pods is this deployment managing
  selector:
    matchLabels:
      app: client
  # defines how the pods should look like
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: client
          image: mp3por/client
---
apiVersion: v1
kind: Service
metadata:
  name: client-srv
spec:
  type: ClusterIP
  # tells the service which pods to expose
  selector:
    app: client
  ports:
    - name: client
      protocol: TCP
      port: 3000 # external port
      targetPort: 3000 # internal port
