blog/infra/k8s/comments-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comments-depl
spec:
  replicas: 1
  # defines which pods is this deployment managing
  selector:
    matchLabels:
      app: comments
  # defines how the pods should look like
  template:
    metadata:
      labels:
        app: comments
    spec:
      containers:
        - name: comments
          image: mp3por/comments
---
apiVersion: v1
kind: Service
metadata:
  name: comments-srv
spec:
  type: ClusterIP
  # tells the service which pods to expose
  selector:
    app: comments
  ports:
    - name: comments
      protocol: TCP
      port: 4001 # external port
      targetPort: 4001 # internal port
