blog/infra/k8s/event-bus-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-bus-depl
spec:
  replicas: 1
  # defines which pods is this deployment managing
  selector:
    matchLabels:
      app: event-bus
  # defines how the pods should look like
  template:
    metadata:
      labels:
        app: event-bus
    spec:
      containers:
        - name: event-bus
          image: mp3por/event-bus
---
apiVersion: v1
kind: Service
metadata:
  name: event-bus-srv
spec:
  type: ClusterIP
  # tells the service which pods to expose
  selector:
    app: event-bus
  ports:
    - name: event-bus
      protocol: TCP
      port: 4005 # external port
      targetPort: 4005 # internal port
