blog/infra/k8s/moderation-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moderation-depl
spec:
  replicas: 1
  # defines which pods is this deployment managing
  selector:
    matchLabels:
      app: moderation
  # defines how the pods should look like
  template:
    metadata:
      labels:
        app: moderation
    spec:
      containers:
        - name: moderation
          image: mp3por/moderation
---
apiVersion: v1
kind: Service
metadata:
  name: moderation-srv
spec:
  type: ClusterIP
  # tells the service which pods to expose
  selector:
    app: moderation
  ports:
    - name: moderation
      protocol: TCP
      port: 4003 # external port
      targetPort: 4003 # internal port
