blog/infra/k8s/posts-src.yaml
apiVersion: v1
kind: Service
metadata:
  name: posts-srv
spec:
  type: NodePort
  # tells the service which pods to expose
  selector:
    app: posts
  ports:
    - name: posts
      protocol: TCP
      port: 4000 # external port
      targetPort: 4000 # internal port
